#49 Add member to group
